# simple_store

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  cmake_install.cmake  justfile  simple_store.cbp
.cache/clangd/index/: io.c.5E44C22113282B79.idx  io.h.8E2A2EBB3B06FE87.idx  main.c.127E9CB3EDF67065.idx  store.c.34916D334799C355.idx  store.h.B55A5E451DB64798.idx
data/: .gitignore
include/: io.h  store.h
src/: io.c  main.c  store.c
test/teste/: teste.cbp
